--- a/css/blogs.css
+++ b/css/blogs.css
@@ -59,6 +59,8 @@ body {
     z-index: 20;
 }
 
+h3 {}
+
 .header {
     background-color: rgba(0, 0, 0, .4);
     top: 0;
@@ -77,52 +79,6 @@ body {
 
 .header.is-active {
     right: 0;
-}
-
-.header #menu-h .desplegar {
-    /* width: 150px; */
-    /* height: 37px; */
-    color: #fff;
-    background: transparent;
-    border-radius: 5px;
-    border: 1px solid white;
-    font-size: 1.1rem;
-    /* margin-top: 12px; */
-    font-family: 'Oswald', sans-serif;
-}
-
-.header #menu-h .desplegar:hover {
-    color: white;
-    background-color: #088DD1;
-    cursor: pointer;
-}
-
-.header #menu-h .sub-menu {
-    display: none;
-}
-
-.header #menu-h .sub-menu a {
-    /* display: flex; */
-    /* align-items: center;
-    justify-content: center; */
-    color: #fff;
-    background-color: #088DD1;
-    text-decoration: none;
-    /* padding: 10px; */
-    font-size: .9rem;
-    /* margin: 0 auto; */
-    flex-direction: column-reverse;
-}
-
-.header #menu-h:hover .sub-menu {
-    /* float: none;
-    padding: 0 0;
-    text-decoration: none;
-    text-align: center; */
-    /* display: block; */
-    display: block;
-    /* flex-direction: column;
-    align-items: center; */
 }
 
 .header #menu-h {
@@ -204,12 +160,7 @@ body {
 
 /* contenido */
 
-.contenido {
-    border: 2px solid #20b2aa;
-    background-color: rgb(218, 209, 209);
-    display: grid;
-    grid-template-columns: .3fr 1fr .3fr;
-}
+.contenido {}
 
 
 /* ------------------------------- */
@@ -226,36 +177,6 @@ body {
     height: 50px;
     margin-top: 10px;
     margin-bottom: 10px;
-}
-
-
-/* ------------------------------- */
-
-.contenido .acceso-directo {
-    border: 2px solid #20b2aa;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.contenido .publicaciones {
-    border: 2px solid #20b2aa;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.contenido .noticias-tecnologicas {
-    border: 2px solid #20b2aa;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 
