--- a/css/storeia.css
+++ b/css/storeia.css
@@ -44,6 +44,7 @@ body {
     background-size: cover;
     background-color: #FFF;
     font-family: 'Oswald', sans-serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 .burger-button {
