--- a/css/storeia.css
+++ b/css/storeia.css
@@ -1,13 +1,13 @@
 /* tipo de letra */
 
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
 
 /* icono de menu  */
 
 @font-face {
-    font-family: 'icomoon';
-    src: url('../fonts/icomoon.eot?3ot2jt');
-    src: url('../fonts/icomoon.eot?3ot2jt#iefix') format('embedded-opentype'), url('../fonts/icomoon.ttf?3ot2jt') format('truetype'), url('../fonts/icomoon.woff?3ot2jt') format('woff'), url('../fonts/icomoon.svg?3ot2jt#icomoon') format('svg');
+    font-family: "icomoon";
+    src: url("../fonts/icomoon.eot?3ot2jt");
+    src: url("../fonts/icomoon.eot?3ot2jt#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?3ot2jt") format("truetype"), url("../fonts/icomoon.woff?3ot2jt") format("woff"), url("../fonts/icomoon.svg?3ot2jt#icomoon") format("svg");
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -16,7 +16,7 @@
 [class^="icon-"],
 [class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
+    font-family: "icomoon" !important;
     speak: never;
     font-style: normal;
     font-weight: normal;
@@ -42,8 +42,8 @@ body {
     padding: 0;
     height: 100vh;
     background-size: cover;
-    background-color: #FFF;
-    font-family: 'Oswald', sans-serif;
+    background-color: #fff;
+    font-family: "Oswald", sans-serif;
 }
 
 .burger-button {
@@ -52,7 +52,7 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: rgba(253, 171, 1, .7);
+    background-color: rgba(253, 171, 1, 0.7);
     color: #000;
     line-height: 50px;
     text-align: center;
@@ -63,8 +63,8 @@ body {
 h2 {
     font-size: 1.1rem;
     font-weight: bolder;
-    color: #419CCA;
-    border: 1px solid #419CCA;
+    color: #419cca;
+    border: 1px solid #419cca;
     width: 200px;
     margin: 0 auto;
     padding: 15px;
@@ -74,12 +74,12 @@ h2 {
 }
 
 h2:hover {
-    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
+    background: linear-gradient(-180deg, #6fc0f9 10%, #0a96f7 100%);
     color: #fff;
 }
 
 .header {
-    background-color: rgba(0, 0, 0, .4);
+    background-color: rgba(0, 0, 0, 0.4);
     top: 0;
     bottom: 0;
     width: 100vw;
@@ -91,7 +91,7 @@ h2:hover {
     align-items: center;
     flex-direction: column;
     z-index: 10;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .header.is-active {
@@ -107,12 +107,12 @@ h2:hover {
     border: 1px solid white;
     font-size: 1.1rem;
     /* margin-top: 12px; */
-    font-family: 'Oswald', sans-serif;
+    font-family: "Oswald", sans-serif;
 }
 
 .header #menu-h .desplegar:hover {
     color: white;
-    background-color: #088DD1;
+    background-color: #088dd1;
     cursor: pointer;
 }
 
@@ -130,7 +130,7 @@ h2:hover {
     background-color: #78b7d8;
     text-decoration: none;
     /* padding: 10px; */
-    font-size: .9rem;
+    font-size: 0.9rem;
     /* margin: 0 auto; */
     flex-direction: column-reverse;
 }
@@ -166,7 +166,7 @@ h2:hover {
 
 .header #menu-h a:hover {
     color: white;
-    background-color: #088DD1;
+    background-color: #088dd1;
     margin-left: 0;
 }
 
@@ -185,14 +185,14 @@ h2:hover {
     font-size: 1.4rem;
     color: #fff;
     text-decoration: none;
-    transition: .5s all ease-in-out;
+    transition: 0.5s all ease-in-out;
 }
 
 .header #menu-h ul li a:hover {
-    background-color: #088DD1;
+    background-color: #088dd1;
     /* margin-top: 10px; */
     /* margin-bottom: 10px; */
-    transition: .5s all ease-in-out;
+    transition: 0.5s all ease-in-out;
 }
 
 .header #menu-h ul li ul {
@@ -300,7 +300,7 @@ h2:hover {
 .contenido .logo {
     width: 100vw;
     text-align: center;
-    background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
+    background: linear-gradient(70deg, #6fc0f9 7%, #0a96f7 20%);
 }
 
 .contenido .logo img {
@@ -317,7 +317,7 @@ h2:hover {
 
 @keyframes alfondo {
     0% {
-        transform: scale(.7);
+        transform: scale(0.7);
     }
     100% {
         transform: scale(1);
@@ -461,6 +461,7 @@ h2:hover {
     margin-bottom: 50px;
     display: flex;
     overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 .contenido .accesorios .accesorio::-webkit-scrollbar {
@@ -470,8 +471,7 @@ h2:hover {
 }
 
 .contenido .accesorios .accesorio::-webkit-scrollbar-thumb {
-    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
-    ;
+    background: linear-gradient(-180deg, #6fc0f9 10%, #0a96f7 100%);
     border-radius: 5px;
 }
 
@@ -493,7 +493,7 @@ h2:hover {
 .contenido .accesorios .accesorio .accesorio-tipo h3 {
     line-height: 40px;
     height: 40px;
-    font-size: .8em;
+    font-size: 0.8em;
     margin: 0;
     text-align: center;
 }
@@ -508,19 +508,19 @@ h2:hover {
     line-height: 40px;
     font-size: 1em;
     text-align: center;
-    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
-    padding: .5em .5em;
+    background: linear-gradient(-180deg, #6fc0f9 10%, #0a96f7 100%);
+    padding: 0.5em 0.5em;
     margin: 5px;
     margin-top: 100px;
     text-decoration: none;
     border: none;
     border-radius: 10px;
-    box-shadow: inset 0 -.2em rgba(0, 0, 0, .2);
+    box-shadow: inset 0 -0.2em rgba(0, 0, 0, 0.2);
     color: #fff;
     cursor: pointer;
     /* para quitar el color del borde cuando se da click */
     outline: none;
-    transition: .2s;
+    transition: 0.2s;
     will-change: transform;
 }
 
@@ -530,7 +530,7 @@ h2:hover {
 }
 
 .contenido .accesorios .accesorio .accesorio-tipo a:active {
-    transform: scale(.9);
+    transform: scale(0.9);
 }
 
 
@@ -614,7 +614,7 @@ li {
 .contenido .mi_trabajo .formateo .sistemas_operativos {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: .2fr 1fr .2fr;
+    grid-template-rows: 0.2fr 1fr 0.2fr;
 }
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .titulo {
@@ -644,7 +644,7 @@ li {
 /* con thumb se accede a la barra */
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .linux::-webkit-scrollbar-thumb {
-    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
+    background: linear-gradient(-180deg, #6fc0f9 10%, #0a96f7 100%);
     border-radius: 5px;
 }
 
@@ -667,7 +667,7 @@ li {
     height: 140px;
     margin: 0 10px;
     border: 1px solid gray;
-    box-shadow: -8px 10px 10px #AEB2B2;
+    box-shadow: -8px 10px 10px #aeb2b2;
     border-radius: 20px;
 }
 
@@ -721,7 +721,7 @@ li {
     height: 140px;
     margin: 0 10px;
     border: 1px solid gray;
-    box-shadow: -10px 5px 15px 0px #AEB2B2;
+    box-shadow: -10px 5px 15px 0px #aeb2b2;
     border-radius: 20px;
 }
 
@@ -800,7 +800,7 @@ li {
 /* ----------- footer ------------*/
 
 footer {
-    background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
+    background: linear-gradient(70deg, #6fc0f9 7%, #0a96f7 20%);
     text-align: center;
     padding: 10px 0;
     display: flex;
@@ -838,7 +838,7 @@ footer .social-desa a img {
 
 footer .social-desa a img:hover {
     animation-name: aumentar;
-    animation-duration: .5s;
+    animation-duration: 0.5s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
 }
@@ -873,14 +873,14 @@ footer .fuentes h3 {
 }
 
 footer .fuentes p {
-    font-size: .7rem;
+    font-size: 0.7rem;
     margin-top: 30px;
     color: #fff;
     font-style: italic;
     margin: 0;
 }
 
-@media screen and (min-width:425px) {
+@media screen and (min-width: 425px) {
     .contenido .presentacion .slider .slides .navigation-manual {
         margin-top: 250px;
     }
@@ -889,7 +889,7 @@ footer .fuentes p {
     }
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
     .contenido .presentacion .slider .slides .navigation-manual {
         margin-top: 270px;
     }
@@ -916,25 +916,25 @@ footer .fuentes p {
     }
     footer {
         display: grid;
-        grid-template-columns: 1fr 1fr .3fr;
+        grid-template-columns: 1fr 1fr 0.3fr;
     }
     footer .fuentes {
         line-height: 25px;
     }
     footer .fuentes p {
-        font-size: .6em;
+        font-size: 0.6em;
     }
     footer .fuentes h3 {
-        font-size: .8em;
+        font-size: 0.8em;
     }
 }
 
-@media screen and (min-width:1024px) {
+@media screen and (min-width: 1024px) {
     .burger-button {
         display: none;
     }
     .header {
-        background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
+        background: linear-gradient(70deg, #6fc0f9 7%, #0a96f7 20%);
         /* position: absolute; */
         /* display: flex;
         align-items: flex-start; */
@@ -998,11 +998,11 @@ footer .fuentes p {
         background: rgba(0, 0, 0, 0.5);
         border-radius: 15px;
         opacity: 0;
-        transition: all .5s ease-out;
+        transition: all 0.5s ease-out;
     }
     .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas p:hover {
         opacity: 1;
-        transition: all .5s ease-out;
+        transition: all 0.5s ease-out;
     }
     .contenido .presentacion .slider .slides .slide img {
         object-fit: fill;
