--- a/css/storeia.css
+++ b/css/storeia.css
@@ -330,7 +330,7 @@ h2:hover {
 .contenido .presentacion {
     justify-content: center;
     position: relative;
-    height: 170px;
+    /* height: 170px; */
     margin: 0 auto;
     object-fit: cover;
 }
@@ -371,7 +371,7 @@ h2:hover {
 .contenido .presentacion .slider .slides .navigation-manual {
     width: 100%;
     position: absolute;
-    margin-top: 190px;
+    margin-top: 210px;
     display: flex;
     justify-content: center;
 }
@@ -418,7 +418,7 @@ h2:hover {
     position: absolute;
     display: flex;
     justify-content: center;
-    margin-top: 190px;
+    margin-top: 210px;
     animation-name: deslizar;
     animation-duration: 1.5s;
 }
@@ -544,6 +544,8 @@ h2:hover {
 
 .contenido .mi_trabajo {
     margin-top: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .contenido .mi_trabajo .formateo {
