Bajando título de celulares en 340px

--- a/css/storeia.css
+++ b/css/storeia.css
@@ -548,6 +548,10 @@ h2:hover {
     margin-right: 20px;
 }
 
+.contenido .mi_trabajo .accesorios {
+    margin-top: 80px;
+}
+
 .contenido .mi_trabajo .formateo {
     position: relative;
     text-align: center;
