--- a/css/storeia.css
+++ b/css/storeia.css
@@ -352,7 +352,7 @@ h2:hover {
     width: 100%;
     /* height: 180px; */
     /* height: auto; */
-    display: flex;
+    /* display: flex; */
 }
 
 .contenido .presentacion .slider .slides input {
@@ -1055,7 +1055,7 @@ footer .social-desa .redes {
     }
     .contenido {
         display: grid;
-        grid-template-columns: 85% 15%;
+        grid-template-columns: 15% 85%;
     }
     .contenido .logo {
         width: 0;
@@ -1066,15 +1066,14 @@ footer .social-desa .redes {
         display: flex;
         align-items: center;
     }
-    .contenido .contenido__comercio .contenido__anuncios {
+    .contenido .contenido__anuncios {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-evenly;
         flex-direction: column;
-        /* border: 1px solid #000; */
+        border: 1px solid #000;
         margin-top: 58px;
         padding: 10px;
-        position: absolute;
     }
     .contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas {
         width: 150px;
