Quitando vista de anuncios

--- a/css/storeia.css
+++ b/css/storeia.css
@@ -327,7 +327,7 @@ h2:hover {
 
 /* ------------------------------- */
 
-.contenido .contenido__comercio .contenido__anuncios {
+.contenido .contenido__anuncios {
     display: none;
 }
 
