--- a/css/storeia.css
+++ b/css/storeia.css
@@ -49,12 +49,12 @@ body {
 .burger-button {
     position: fixed;
     margin: 10px;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
-    background-color: rgba(253, 171, 1, 0.7);
-    color: #000;
-    line-height: 50px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    line-height: 40px;
     text-align: center;
     right: 0;
     z-index: 20;
@@ -350,7 +350,7 @@ h2:hover {
 
 .contenido .presentacion .slider .slides {
     width: 100%;
-    /* height: 180px; */
+    height: 180px;
     /* height: auto; */
     /* display: flex; */
 }
@@ -964,34 +964,15 @@ footer .social-desa .redes {
     }
 }
 
-
-/* 
-@media screen and (min-width: 320px) {
-    .contenido .presentacion .slider .slides .navigation-manual {
-        margin-top: 190px;
-    }
-    .contenido .presentacion .slider .slides .navigation-auto {
-        margin-top: 190px;
-    }
-} */
-
-
-/* 
-@media screen and (min-width: 420px) {
-    .contenido .presentacion .slider .slides .slide img {
-        max-height: 230px;
-    }
-} */
-
 @media screen and (min-width: 768px) {
-    /* .contenido .presentacion .slider .slides .navigation-manual {
+    .contenido .presentacion .slider .slides .navigation-manual {
         margin-top: 270px;
         margin-bottom: 500px;
     }
     .contenido .presentacion .slider .slides .navigation-auto {
         margin-top: 270px;
         margin-bottom: 500px;
-    } */
+    }
     .contenido .presentacion .slider .slides .slide img {
         height: 250px;
         /* object-fit: cover; */
@@ -1026,7 +1007,6 @@ footer .social-desa .redes {
     }
     .header {
         background: linear-gradient(70deg, #6fc0f9 7%, #0a96f7 20%);
-        /* para mover el header */
         position: absolute;
         flex-direction: row;
         right: 0;
@@ -1053,10 +1033,7 @@ footer .social-desa .redes {
         margin: 0;
         padding: 0;
     }
-    .contenido {
-        /* display: grid; */
-        /* grid-template-columns: 15% 85%; */
-    }
+    .contenido {}
     .contenido .logo {
         width: 0;
         height: 58px;
@@ -1100,9 +1077,7 @@ footer .social-desa .redes {
         opacity: 1;
         transition: all 0.5s ease-out;
     }
-    .contenido .presentacion .slider .slides {
-        display: flex;
-    }
+    .contenido .presentacion .slider .slides {}
     .contenido .presentacion .slider .slides .slide img {
         object-fit: fill;
         margin: 0;
